<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_width="match_parent"
       android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/postImageList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/Desp"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@mipmap/add_btn" />
        <TextView
            android:id="@+id/postTitleList"
            android:text="@string/Post"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/postText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:text="@string/PostText"

            android:textStyle="bold">

        </TextView>
        <TextView
            android:id="@+id/timeStamp"
            android:text="@string/Date"
            android:textStyle="italic"
            android:padding="5dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>




    </LinearLayout>

</androidx.cardview.widget.CardView>